# netwatcher

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/scripts/: rust-ci.sh
.github/workflows/: android.yml  freebsd.yml  rust.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app-native/: Cargo.toml
android/app-native/src/: lib.rs
android/app/src/androidTest/java/net/octet_stream/netwatcher/netwatchertestapp/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/octet_stream/netwatcher/netwatchertestapp/: MainActivity.kt
android/app/src/main/java/net/octet_stream/netwatcher/netwatchertestapp/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/net/octet_stream/netwatcher/netwatchertestapp/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/netwatcher_android/: build.gradle.kts  proguard-rules.pro
android/netwatcher_android/src/androidTest/java/net/octet_stream/netwatcher/netwatcher_android/: ExampleInstrumentedTest.java
android/netwatcher_android/src/main/cpp/: CMakeLists.txt  netwatcher_android.cpp
android/netwatcher_android/src/main/java/net/octet_stream/netwatcher/netwatcher_android/: NetwatcherAndroidSupport.java
android/netwatcher_android/src/test/java/net/octet_stream/netwatcher/netwatcher_android/: ExampleUnitTest.java
examples/: watch.rs
java/net/octet_stream/netwatcher/: NetwatcherSupportAndroid.java
src/: android.rs  async_adapter.rs  async_callback.rs  error.rs  imp_mac.rs  imp_win.rs  lib.rs  list_mac.rs  list_unix.rs  list_win.rs  util.rs  watch_android.rs  watch_fd.rs  watch_linux.rs  watch_mac.rs  watch_win.rs
tests/: android_api_test.rs  api_test.rs  async_api_test.rs
tests/helpers/: mod.rs  sys_bsd.rs  sys_linux.rs  sys_mac.rs  sys_windows.rs
tests/windows/: mod.rs
