[package]
name = "netwatcher"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "List network interfaces and watch for changes efficiently"
repository = "https://github.com/thombles/netwatcher"
readme = "README.md"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com>"]
keywords = ["interfaces", "ip", "adapter", "address", "netmask"]
categories = ["network-programming"]
exclude = [
    "android/*",
]

[dependencies]

[target.'cfg(any(target_vendor = "apple", target_os = "linux", target_os = "android"))'.dependencies]
nix = { version = "0.29.0", features = ["net"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
block2 = "0.5.1"
objc2 = "0.5.2"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
]

[build-dependencies]
android-build = "0.1.3"
