[package]
name = "netwatcher"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "List network interfaces and watch for changes efficiently"
repository = "https://github.com/thombles/netwatcher"
readme = "README.md"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com>"]
keywords = ["interfaces", "ip", "adapter", "address", "netmask"]
categories = ["network-programming"]
exclude = [
    "android/*",
]

[features]
default = []
tokio = ["dep:tokio"]
async-io = ["dep:async-io"]

[dependencies]

[target.'cfg(any(target_vendor = "apple", target_os = "linux", target_os = "android"))'.dependencies]
nix = { version = "0.31.2", features = ["net"] }

[target.'cfg(any(target_vendor = "apple", target_os = "linux"))'.dependencies]
tokio = { version = "1", features = ["net", "rt"], optional = true }
async-io = { version = "2", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.22.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
]

[build-dependencies]
android-build = "0.1.3"

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt"] }
async-io = "2"
serial_test = "3"
